compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__modules__alias_aliased_constant.snap
---
source: compiler-core/src/javascript/tests/modules.rs
assertion_line: 59
expression: "\nimport rocket_ship.{ x as y }\nconst z = y\n"
---
----- SOURCE CODE

import rocket_ship.{ x as y }
const z = y


----- COMPILED JAVASCRIPT
import * as $rocket_ship from "../rocket_ship.mjs";
import { x as y } from "../rocket_ship.mjs";

const z = y;
