compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__modules__alias_constant.snap
---
source: compiler-core/src/javascript/tests/modules.rs
assertion_line: 96
expression: "\nimport rocket_ship as boop\npub fn go() { boop.x }\n"
---
----- SOURCE CODE

import rocket_ship as boop
pub fn go() { boop.x }


----- COMPILED JAVASCRIPT
import * as $boop from "../rocket_ship.mjs";

export function go() {
  return $boop.x;
}
