compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__modules__discarded_duplicate_import.snap
---
source: compiler-core/src/javascript/tests/modules.rs
expression: "\nimport esa/rocket_ship\nimport nasa/rocket_ship as _nasa_rocket\npub fn go() { rocket_ship.go() }\n"
---
----- SOURCE CODE
-- esa/rocket_ship.rakun
pub fn go() { 1 }

-- nasa/rocket_ship.rakun
pub fn go() { 1 }

-- main.rakun

import esa/rocket_ship
import nasa/rocket_ship as _nasa_rocket
pub fn go() { rocket_ship.go() }


----- COMPILED JAVASCRIPT
import * as $rocket_ship from "../esa/rocket_ship.mjs";

export function go() {
  return $rocket_ship.go();
}
