compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__modules__multiple_unqualified_fn_call.snap
---
source: compiler-core/src/javascript/tests/modules.rs
assertion_line: 32
expression: "import rocket_ship.{a,b as bb}\npub fn go() { a() + bb() }\n"
---
----- SOURCE CODE
import rocket_ship.{a,b as bb}
pub fn go() { a() + bb() }


----- COMPILED JAVASCRIPT
import * as $rocket_ship from "../rocket_ship.mjs";
import { a, b as bb } from "../rocket_ship.mjs";

export function go() {
  return a() + bb();
}
