compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__modules__nested_fn_call.snap
---
source: compiler-core/src/javascript/tests/modules.rs
assertion_line: 118
expression: "import one/two\npub fn go() { two.go() }"
---
----- SOURCE CODE
import one/two
pub fn go() { two.go() }

----- COMPILED JAVASCRIPT
import * as $two from "../one/two.mjs";

export function go() {
  return $two.go();
}
